Bug 1401366. P1 - format HTMLMediaElement::ShutdownObserver. r=kaku

MozReview-Commit-ID: K9ZYTedgUjC

--HG--
extra : rebase_source : 6a2537f27c91962ecfadd3b7489c9cdcf852da42